# llamaindex-python

./: .env.example  .gitignore  .pdm-python  AGENTS.md  Makefile  README.md  README_gradio.md  config.example.yaml  config_bedrock.yaml  gradio_app.py  pyproject.toml  test_global_search_simple.py
.spec-workflow/approvals/drift-search/: approval_1757294747400_6own5zhfw.json  approval_1757308358150_nbju64tgn.json
.spec-workflow/approvals/global-search/: approval_1757325188070_q830l6c2a.json  approval_1757325423609_91qu5ybz4.json  approval_1757325664362_pebkr1pid.json  approval_1757325941373_6chjk1d9g.json  approval_1757326378672_7oft0k9xn.json  approval_1757326662064_wtmfeggaq.json  approval_1757332337376_dgszjxl4g.json  approval_1757332918981_lzuob0opx.json  approval_1757334599710_oihbm9l03.json  approval_1757335123405_tvqbspu5q.json
.spec-workflow/specs/drift-search/: design.md  requirements.md  tasks.md
.spec-workflow/specs/global-search/: design.md  requirements.md  tasks.md
.spec-workflow/specs/local-search/: design.md  requirements.md  tasks.md
config/: config.example.yaml  config_bedrock.yaml
docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
docs/: configuration-implementation-spec.md  ms-graphrag-configuration-spec.md
docs/api/: global_search.md
docs/guides/: global_search_usage.md
scripts/: demo.sh  integration_test.sh
scripts/demo_dataset/: README.md  config.yaml  run_demo.sh
scripts/demo_dataset/documents/: ai_technology.txt  biotech_innovation.txt  climate_change.txt  quantum_computing.txt
src/graphrag_anthropic_llamaindex/: config_manager.py  db_manager.py  document_processor.py  file_filter.py  graph_operations.py  llm_utils.py  main.py  search_processor.py  vector_store_manager.py
src/graphrag_anthropic_llamaindex/drift_search/: __init__.py  context_builder.py  drift_search_engine.py  global_searcher.py  local_searcher.py  models.py  response_generator.py
src/graphrag_anthropic_llamaindex/global_search/: __init__.py  context_builder.py  map_processor.py  models.py  prompts.py  reduce_processor.py  retriever.py  router.py
src/graphrag_anthropic_llamaindex/local_search/: __init__.py  context_builder.py  data_loader.py  entity_mapper.py  models.py  prompts.py  retriever.py
tests/: test_api_key_validation.py  test_cli_e2e.py  test_context_builder.py  test_drift_search.py  test_global_search_integration.py  test_index_creation.py  test_local_search.py  test_map_reduce.py
