[tool.poetry]
name = "graphrag-anthropic-llamaindex"
version = "0.1.0"
description = "A project to replicate ms-graphrag functionality using LlamaIndex and Anthropic Claude."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
llama-index = "^0.10.0"
anthropic = "^0.23.0"
pyyaml = "^6.0"
llama-index-vector-stores-lancedb = "^0.1.2"
beautifulsoup4 = "^4.12.3"
unstructured = {extras = ["local-inference"], version = "^0.14.0"}
llama-index-embeddings-huggingface = "^0.2.0"
torch = "^2.3.0"
pandas = "^2.2.0"
pyarrow = "^16.0.0"
fsspec = "^2024.3.0"
networkx = "^3.2.1"
graspologic = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
