[tool.poetry]
name = "graphrag-anthropic-llamaindex"
version = "0.1.0"
description = "A project to replicate ms-graphrag functionality using LlamaIndex and Anthropic Claude."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
llama-index = "^0.12.46"
anthropic = "^0.57.1"
pyyaml = "^6.0"

beautifulsoup4 = "^4.12.3"
unstructured = {extras = ["local-inference"], version = "^0.14.0"}

torch = "^2.3.0"
pandas = "^2.2.0"
pyarrow = "^16.0.0"
fsspec = "^2024.3.0"
networkx = "^3.2.1"
cdlib = "^0.1.0"
leidenalg = "^0.8.0"
cython = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"


[tool.pdm]
distribution = true

[project]
name = "graphrag-anthropic-llamaindex"
version = "0.1.0"
description = "A project to replicate ms-graphrag functionality using LlamaIndex and Anthropic Claude."
authors = [
    {name = "asopitech", email = "asopitech.iot.research+github@gmail.com"},
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "llama-index<1.0.0,>=0.12.46",
    "anthropic<1.0.0,>=0.57.1",
    "pyyaml<7.0,>=6.0",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "unstructured[local-inference]<1.0.0,>=0.14.0",
    "torch<3.0.0,>=2.3.0",
    "pandas<3.0.0,>=2.2.0",
    "pyarrow>=20.0.0",
    "fsspec<2025.0.0,>=2024.3.0",
    "networkx<4.0.0,>=3.2.1",
    "llama-index-vector-stores-lancedb>=0.3.3",
    "llama-index-llms-anthropic>=0.7.6",
    "llama-index-embeddings-huggingface>=0.5.5",
    "graspologic>=3.4.1",
    "future>=1.0.0",
]
requires-python = "<3.12,>=3.9"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "pytest<8.0,>=7.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
